syntax = "proto3";

option go_package = "shortener/pkg/service/proto";

message BatchRequestEntity {
  string correlation_id = 1;
  string original_url = 2;
}

message BatchResponseEntity {
  string correlation_id = 1;
  string short_url = 2;
}

message BatchRequest {
  repeated BatchRequestEntity urls = 1;
}

message BatchResponse {
  repeated BatchResponseEntity urls = 1;
}
