syntax = "proto3";

option go_package = "shortener/pkg/service/proto";

message PingRequest {
}

message PingResponse {
}
