syntax = "proto3";

option go_package = "shortener/pkg/service/proto";

message StatsRequest {
}

message StatsResponse {
  string urls = 1;
  string users = 2;
}
