syntax = "proto3";

option go_package = "shortener/pkg/service/proto";

message URL {
  string short_url = 1;
  string original_url = 2;
}

message SavedByUserRequest {
}

message SavedByUserResponse {
  repeated URL urls = 1;
}
